--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,3 +1,15 @@
-.form-field {
+h3 {
   display: inline-block;
+}
+
+.form-input {
+  border-radius: 8px;
+}
+
+.btn-submit {
+  margin: 20px;
+}
+
+.form-checkbox {
+  border-radius: 8px;
 }
