--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,25 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #d0d0eb;
 }
-
+/* 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+} */
+
+h2,
+h3 {
+  display: inline-block;
+}
+
+.weather-condition {
+  font-size: 80px;
+}
+
+.weather-temperature {
+  font-size: 40px;
 }
 
 button {
